# semiprimes

./: README.md  semiprimes.cabal
src/: main.hs
