cabal-version:       2.2

name:                semiprimes
version:             0.1.0.0

executable semiprimes
  hs-source-dirs:      src
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , primes
                       , heaps
                       , queues
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints